<resources>

    <string name="app_name">Campus Connect Project</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="exit">Exit</string>
    <string name="register">REGISTER</string>
    <string name="back">Back</string>
    <string name="next">Next</string>

    <string name="campus_connect">Campus Connect</string>
    <string name="landing_page">Landing Page</string>
    <string name="campus_background_image">Campus background image</string>
    <string name="app_logo">App logo</string>
    <string name="never_miss_a_campus_moment_with">Never miss a campus moment with</string>
    <string name="a_centralized_mobile_platform_designed_to_bridge_the_gap_between_students_and_campus_activities">A centralized mobile platform designed to bridge the gap between students and campus activities</string>
    <string name="school_event_list">School Event List</string>
    <string name="event_details">Event Details</string>
    <string name="event_reminders">Event Reminders</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">No Account?</string>

    <string name="student_number">Student Number</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="others_please_specify">Others (Please Specify)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="college">College</string>
    <string name="program">Program</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="username">Username</string>
    <string name="please_specify_gender">please_specify_gender</string>
</resources>